@@ -492,15 +492,29 @@ public class DocBuilder {
             getDebugLogger().log(DIHLogLevels.ENTITY_OUT, epw.getEntity().getName(), arow);
           }
           importStatistics.rowsCount.incrementAndGet();
+          
+          DocWrapper childDoc = null;
           if (doc != null) {
-            handleSpecialCommands(arow, doc);
-            addFields(epw.getEntity(), doc, arow, vr);
+            if (epw.getEntity().isChild()) {
+              childDoc = new DocWrapper();
+              handleSpecialCommands(arow, childDoc);
+              addFields(epw.getEntity(), childDoc, arow, vr);
+              doc.addChildDocument(childDoc);
+            } else {
+              handleSpecialCommands(arow, doc);
+              addFields(epw.getEntity(), doc, arow, vr);
+            }
           }
           if (epw.getEntity().getChildren() != null) {
             vr.addNamespace(epw.getEntity().getName(), arow);
             for (EntityProcessorWrapper child : epw.getChildren()) {
-              buildDocument(vr, doc,
+              if (childDoc != null) {
+              buildDocument(vr, childDoc,
                   child.getEntity().isDocRoot() ? pk : null, child, false, ctx, entitiesToDestroy);
+              } else {
+                buildDocument(vr, doc,
+                    child.getEntity().isDocRoot() ? pk : null, child, false, ctx, entitiesToDestroy);
+              }
             }
             vr.removeNamespace(epw.getEntity().getName());
           }
